compiler/test-data/parser/layout/errors/invalid_size.frel
module test.layout.errors.invalid_size

// ERROR: Invalid size specification
blueprint InvalidSize {
    """layout
      abc   ~1
    | left | right |
    """
}
